--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -101,6 +101,8 @@
 @media screen and (max-width: 767px) {
   .humbugger-menu {
     display: block;
+    background-color: transparent;
+    border: none;
   }
 }
 .nav-items-container-item-mobile {
