--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -1,7 +1,3 @@
-.slick-prev:before,
-.slick-next:before {
-  color: black;
-}
 .main-container {
   display: flex;
   flex-direction: column;
@@ -10,8 +6,8 @@
 }
 
 .slick-container {
-  width: 100%;
-  max-width: 1100px;
+  width: 95%;
+  max-width: 1040px;
   margin-top: 10px;
 }
 
@@ -20,4 +16,33 @@
   height: 50px;
   width: 50px;
   border-radius: 80px;
+}
+
+/* You can change the CSS color to style the Next and 
+Previous Arrow buttons according to your project */
+
+.slick-prev:before,
+.slick-next:before {
+  color: black;
+}
+.slick-item {
+  text-align: center;
+}
+.image-story-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.error-icon {
+  color: #4094ef;
+  width: 44px;
+  height: 38px;
+}
+.error-msg-view {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #262626;
 }
