--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -1,112 +1,22 @@
-.post-container {
-  background: #ffffff;
-  border: 1px solid #dbdbdb;
-  border-radius: 4px 4px 0px 0px;
-  padding-top: 14px;
-  padding-bottom: 14px;
+.post-container-1 {
   width: 100%;
-  max-width: 1040px;
-  margin-bottom: 40px;
-}
-@media screen and (max-width: 767px) {
-  .post-container {
-    border: none;
-    margin-bottom: 0px;
-  }
-}
-.profile-pic-container {
-  border: 1.03px solid;
-  border-image-source: linear-gradient(
-    314.35deg,
-    #e20337 6.03%,
-    #c60188 40.88%,
-    #7700c3 73.23%
-  );
-  /* border: 1px solid transparent;
-  border-image: linear-gradient(45deg, red, yellow); */
-  border-image-slice: 1;
-  height: 120px;
-  border-radius: 10px;
-  width: 32px;
-  height: 32px;
+  min-height: 600px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 24px;
-}
-.profile-pic-name-container {
-  display: flex;
-  align-items: center;
-  padding-bottom: 13px;
-}
-.profile-pic {
-  width: 28px;
-  height: 28px;
-  border-radius: 20px;
-}
-.person-name {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 18px;
-  color: #262626;
-  margin-left: 16px;
-}
-.post-photo {
-  width: 100%;
-  height: 614px;
 }
 @media screen and (max-width: 767px) {
-  .post-photo {
-    height: 375px;
+  .post-container-1 {
+    min-height: 400px;
   }
 }
-.about-post-container {
-  margin-left: 24px;
-  margin-top: 18px;
-}
-.reaction-container {
-  width: 110px;
+
+.failure-view-container-2 {
   display: flex;
-  justify-content: space-between;
-}
-.likes-count {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 18px;
-  color: #262626;
-}
-.post-caption {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
-  color: #262626;
-}
-.comment-details {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 18px;
-  color: #262626;
-}
-.comment {
-  font-weight: 400;
-  margin-left: 10px;
-}
-.post-time {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
-  color: #989898;
-}
-.post-like {
-  color: #f05161;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 300px;
+  text-align: center;
 }
