--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -18,9 +18,6 @@
   border-radius: 80px;
 }
 
-/* You can change the CSS color to style the Next and 
-Previous Arrow buttons according to your project */
-
 .slick-prev:before,
 .slick-next:before {
   color: black;
@@ -45,4 +42,25 @@ Previous Arrow buttons according to your project */
   font-size: 16px;
   line-height: 24px;
   color: #262626;
+}
+.failure-view-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+.try-again-btn {
+  padding: 8px 24px;
+  gap: 8px;
+  width: 102px;
+  height: 32px;
+  background: #4094ef;
+  border-radius: 8px;
+  font-size: 12px;
+  color: #ffffff;
+  border: none;
+  outline: none;
 }
