--- a/src/components/EachPost/index.css
+++ b/src/components/EachPost/index.css
@@ -90,14 +90,19 @@
 .comment-details {
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 500 !important;
   font-size: 14px;
   line-height: 18px;
+  margin-right: 10px;
   color: #262626;
 }
 .comment {
   font-weight: 400;
-  margin-left: 10px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-size: 14px;
+  line-height: 18px;
+  color: #262626;
 }
 .post-time {
   font-family: 'Roboto';
@@ -106,4 +111,10 @@
   font-size: 14px;
   line-height: 18px;
   color: #989898;
+}
+.like-icon {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  padding: 0px;
 }
