--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -11,6 +11,15 @@
     min-height: 400px;
   }
 }
+.post-list-item-container {
+  list-style-type: none;
+  padding-left: 0px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .failure-view-container-2 {
   display: flex;
