--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  min-height: 10vh;
 }
 .header-logo-container-1 {
   width: 60%;
@@ -14,12 +15,17 @@
   }
 }
 .header-logo-name {
-  font-family: 'Roboto';
+  font-family: 'Sofia', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
   color: #262626;
+}
+@media screen and (max-width: 767px) {
+  .header-logo-name {
+    font-size: 17px;
+  }
 }
 .header-logo-image {
   width: 59px;
@@ -58,10 +64,16 @@
   border-radius: 3px;
   width: 50%;
 }
+
 .search-caption {
   border: none;
   outline: none;
   padding: 5px;
+}
+@media screen and (max-width: 767px) {
+  .search-caption {
+    width: 100%;
+  }
 }
 .search-icon-container {
   background: #dbdbdb;
@@ -73,10 +85,18 @@
   align-items: center;
   padding: 0px;
 }
+.search-btn {
+  height: 26px;
+  background-color: transparent;
+  border-radius: 0px 2px 2px 0px;
+  border: none;
+  outline: none;
+}
 .search-icon {
   color: #989898;
   border-radius: 0px 2px 2px 0px;
-  height: 26px;
+  height: 100%;
+  width: 60%;
 }
 .logout-btn {
   padding: 8px 24px;
@@ -144,4 +164,15 @@
   font-size: 14px;
   line-height: 18px;
   color: #262626;
+}
+.search-icon-sm {
+  margin: auto;
+  width: 100%;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+@media screen and (min-width: 767px) {
+  .search-icon-sm {
+    display: none;
+  }
 }
