--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -14,8 +14,8 @@
 
 .logo-image {
   margin: 0px 10px;
-  height: 50px;
-  width: 50px;
+  height: 60px;
+  width: 60px;
   border-radius: 80px;
 }
 
@@ -25,11 +25,19 @@
 }
 .slick-item {
   text-align: center;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  align-items: center !important;
 }
 .image-story-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 70px;
+  height: 70px;
+  border: 3px solid #e20337;
+  border-radius: 40px;
 }
 .error-icon {
   color: #4094ef;
